<resources>
    <string name="app_name">Taskmaster</string>
    <string name="action_button_text">add_new_task_button</string>
    <string name="task_name">Task Name</string>
    <string name="taskbackground">Task Background</string>
    <string name="name">Name</string>
    <string name="cancel_new_task_button">cancel_new_task_button</string>
    <string name="accept_new_task_button">accept_new_task_button</string>
    <string name="label">Label</string>
    <string name="taskname">TaskName</string>
    <string name="button_complete">Button complete</string>
    <string name="button_edit">Button edit</string>
    <string name="button_remove">Button remove</string>
</resources>