<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mna_mainLayout_cly"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greysh_black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mna_taskLabel_txv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:text="@string/label"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintDimensionRatio="w,1:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/mna_taskholder_cdv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="@color/dark_black"
        android:visibility="gone"
        app:cardBackgroundColor="@color/dark_black"
        app:cardCornerRadius="18dp"
        app:layout_constraintDimensionRatio="w,2:12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mna_taskLabel_txv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mna_taskholderlayout_cly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp">

            <Space
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/mna_taskName_txv"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mna_taskName_txv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:autoSizeTextType="uniform"
                android:text="@string/task_name"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/space2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="25"
                app:layout_constraintStart_toEndOf="@+id/space"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/mna_taskNameEdit_edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:autofillHints="TaskName"
                android:background="@color/transparent"
                android:backgroundTint="@color/transparent"
                android:fontFamily="@font/itim_regular"
                android:gravity="center_vertical"
                android:hint="@string/taskname"
                android:inputType="text"
                android:paddingVertical="8dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/mna_taskName_txv"
                app:layout_constraintStart_toEndOf="@+id/space"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor" />

            <Space
                android:id="@+id/space2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/mna_taskName_txv"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="-12dp"
        android:background="@color/transparent"
        android:backgroundTint="@color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/mna_addNewTask_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mna_taskholder_cdv"
        app:layout_constraintVertical_weight="12" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mna_addNewTask_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/action_button_text"
        android:foreground="@drawable/action_button_1"
        app:backgroundTint="#00DF1919"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mna_cancelNewTask_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/cancel_new_task_button"
        android:foreground="@drawable/cancel_button_1"
        android:src="@android:drawable/ic_input_add"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mna_addNewTask_btn"
        app:layout_constraintEnd_toEndOf="@+id/mna_addNewTask_btn"
        app:layout_constraintStart_toStartOf="@+id/mna_addNewTask_btn"
        app:layout_constraintTop_toTopOf="@+id/mna_addNewTask_btn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mna_acceptNewTask_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/accept_new_task_button"
        android:foreground="@drawable/accept_button_1"
        android:src="@android:drawable/ic_input_add"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mna_addNewTask_btn"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/mna_addNewTask_btn"
        app:layout_constraintTop_toTopOf="@+id/mna_addNewTask_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>